static file update

--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
 
     });
     function callBack(){
-         var f = new $.thumb(0, $('#thumb'),"http://localhost:81/praiseThumb/test.php");
+         var f = new $.thumb(0, $('#thumb'),"/update");
         f.clickAction();
     }
 
